@@ -160,7 +160,7 @@ public class AccountViewService extends AccountService {
             model.put(BUSINESS_COUNTS, insightMap.entrySet().stream()
                     .sorted((e1, e2) -> Integer.compare(e2.getValue(), e1.getValue()))
                     .map(entry -> Map.of("category", entry.getKey(), "count", entry.getValue()))
-                    .collect(Collectors.toList()));
+                    .toList());
         }
     }
 
@@ -174,7 +174,7 @@ public class AccountViewService extends AccountService {
                     .sorted((e1, e2) -> e2.getValue().compareTo(e1.getValue()))
                     .map(entry -> Map.of("category", entry.getKey(),
                             "totalAmount", formatCurrency(entry.getValue())))
-                    .collect(Collectors.toList()));
+                    .toList());
         }
     }
 }
